# aula06_bootcamp

./: main.py  main_02.py  pyproject.toml
helper/: aws.py
